[package]
name = "firewall-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
confy = "0.6.1"
dirs = "6.0.0"
env_logger = "0.11.7"
log = "0.4.26"
mnl = "0.2.2"
nfq = "0.2.5"
nftnl = "0.7.0"
nix = { version = "0.29.0", features = ["socket"] }
pnet = "0.35.0"
rustables = "0.8.6"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
