[package]
name = "firewall-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
cli-log = "2.1.0"
confy = "0.6.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ctrlc = "3.4.6"
dirs = "6.0.0"
env_logger = "0.11.7"
futures = "0.3.31"
mnl = "0.2.2"
nfq = "0.2.5"
nftnl = "0.7.0"
pnet = "0.35.0"
rand = "0.9.1"
ratatui = "0.29.0"
rustables = "0.8.6"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
